// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverflow renders 0 1`] = `
Array [
  .c0 {
  text-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders function 1`] = `
Array [
  .c0 {
  text-overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders negative number 1`] = `
Array [
  .c0 {
  text-overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overflow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-overflow: July;
  }
}

@media April {
  .c0 {
    text-overflow: August;
  }
}

@media January {
  .c0 {
    text-overflow: September;
  }
}

@media April {
  .c0 {
    text-overflow: November;
  }
}

@media June {
  .c0 {
    text-overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overflow: July;
  }
}

@media April {
  .c0 {
    text-overflow: August;
  }
}

@media January {
  .c0 {
    text-overflow: September;
  }
}

@media April {
  .c0 {
    text-overflow: November;
  }
}

@media June {
  .c0 {
    text-overflow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow: January;
  }
}

@media April {
  .c0 {
    text-overflow: December;
  }
}

@media January {
  .c0 {
    text-overflow: April;
  }
}

@media April {
  .c0 {
    text-overflow: May;
  }
}

@media June {
  .c0 {
    text-overflow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow: January;
  }
}

@media April {
  .c0 {
    text-overflow: December;
  }
}

@media January {
  .c0 {
    text-overflow: April;
  }
}

@media April {
  .c0 {
    text-overflow: May;
  }
}

@media June {
  .c0 {
    text-overflow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders postitive number 1`] = `
Array [
  .c0 {
  text-overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders string 1`] = `
Array [
  .c0 {
  text-overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflow renders valid theme path 1`] = `
Array [
  .c0 {
  text-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
